--- a/.github/workflows/tag-version.yml
+++ b/.github/workflows/tag-version.yml
@@ -20,4 +20,4 @@ jobs:
           TAG: ${{github.event.pull_request.title}}
           REPO: ${{github.repository}}
           COMMIT: ${{github.sha}}
-        run: ./.github/scripts/add-tag.sh
+        run: ./.github/workflows/scripts/add-tag.sh
